--- a/css/index.css
+++ b/css/index.css
@@ -140,8 +140,7 @@ li {
 }
 
 .fa {
-  padding: 5px;
-  width: 50px;
+  padding: 15px;
   text-align: left;
   text-decoration: none;
   border-radius: 50%;
@@ -151,6 +150,10 @@ li {
 .fa:hover {
   opacity: 0.7;
 }
+
+/* .icon {
+  text-decoration: none;
+} */
 
 /* Set a specific color for each brand */
 
