--- a/css/index.css
+++ b/css/index.css
@@ -221,13 +221,11 @@ button {
   text-align: left;
 }
 
-/* .dark-mode {
+.dark-mode {
   background-color: black;
   color: white;
-  padding: 10px;
-  margin: 3rem;
   max-height: 1rem;
-} */
+}
 
 @media only screen and (max-width: 768px) {
   .nav-menu {
@@ -272,8 +270,17 @@ button {
   .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
+
+  .dark-mode {
+    background-color: black; 
+    color: white;
+    /* padding: 10px;
+    margin: 3rem; */
+    max-height: 1rem;
+  }  
  
 }
+
 
 @media only screen and (max-width: 1024px) {
   .nav-menu {
@@ -318,5 +325,15 @@ button {
   .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
+
+  .dark-mode {
+    background-color: black;
+    color: white;
+    /* padding: 10px;
+    margin: 3rem; */
+    max-height: 1rem;
+  }
  
 }
+
+
